--- a/pom.xml
+++ b/pom.xml
@@ -4,21 +4,51 @@
 	<groupId>department</groupId>
 	<artifactId>Department</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>Department</name>
 
 	<properties>
+		<!-- libraries versions -->
+		<compiler>3.1</compiler>
+		<java.version>1.8</java.version>
+		<com.zenjava>8.1.2</com.zenjava>
 		<spring.version>4.3.5.RELEASE</spring.version>
+		<rx.java>1.2.5</rx.java>
+		<lombok>1.16.12</lombok>
 	</properties>
 
+	<build>
+		<!-- To define the plugin version in your parent POM -->
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${compiler}</version>
+					<configuration>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>com.zenjava</groupId>
+					<artifactId>javafx-maven-plugin</artifactId>
+					<version>${com.zenjava}</version>
+					<configuration>
+						<mainClass>department.Test</mainClass>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<dependencies>
-
+		<!-- RxJava -->
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>javafx</artifactId>
-			<version>2.2</version>
-			<systemPath>${java.home}/jre/lib/ext/jfxrt.jar</systemPath>
-			<scope>system</scope>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>${rx.java}</version>
 		</dependency>
-
+		<!-- Dependency injection container -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -28,6 +58,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<!-- Lombok which allows to reduce amount of boilerplate code -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok}</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
