di, main controller and rx utils

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 					<artifactId>javafx-maven-plugin</artifactId>
 					<version>${com.zenjava}</version>
 					<configuration>
-						<mainClass>department.Test</mainClass>
+						<mainClass>department.Runner</mainClass>
 					</configuration>
 				</plugin>
 			</plugins>
